ft - pruebas unitarias v1